--- a/docker-graphite-statsd/conf/opt/graphite/conf/storage-schemas.conf
+++ b/docker-graphite-statsd/conf/opt/graphite/conf/storage-schemas.conf
@@ -17,10 +17,24 @@
 
 # Carbon's internal metrics. This entry should match what is specified in
 # CARBON_METRIC_PREFIX and CARBON_METRIC_INTERVAL settings
+#[carbon]
+#pattern = ^carbon\.
+#retentions = 10s:6h,1m:90d
+
+#[default_1min_for_1day]
+#pattern = .*
+#retentions = 10s:6h,1m:6d,10m:1800d
+
+
 [carbon]
 pattern = ^carbon\.
-retentions = 10s:6h,1m:90d
+retentions = 10:2160,60:10080,600:262974
 
-[default_1min_for_1day]
+[stats]
+priority = 110
+pattern = ^stats\..*
+retentions = 10:2160,60:10080,600:262974
+
+[default]
 pattern = .*
-retentions = 10s:6h,1m:6d,10m:1800d
+retentions = 10:2160,60:10080,600:262974
