--- a/docker-graphite-statsd/conf/opt/graphite/conf/storage-aggregation.conf
+++ b/docker-graphite-statsd/conf/opt/graphite/conf/storage-aggregation.conf
@@ -12,31 +12,21 @@
 #  aggregationMethod: function to apply to data points for aggregation
 #
 [min]
-pattern = \.lower$
-xFilesFactor = 0.1
+pattern = \.min$
+xFilesFactor = 0.0
 aggregationMethod = min
 
 [max]
-pattern = \.upper(_\d+)?$
-xFilesFactor = 0.1
+pattern = \.max$
+xFilesFactor = 0.0
 aggregationMethod = max
 
 [sum]
-pattern = \.sum$
-xFilesFactor = 0
-aggregationMethod = sum
-
-[count]
 pattern = \.count$
-xFilesFactor = 0
-aggregationMethod = sum
-
-[count_legacy]
-pattern = ^stats_counts.*
-xFilesFactor = 0
+xFilesFactor = 0.0
 aggregationMethod = sum
 
 [default_average]
 pattern = .*
-xFilesFactor = 0.3
+xFilesFactor = 0.0
 aggregationMethod = average
